ui/ui.css
:root
{
    --font-family: sans-serif;
    --default-fg-color: #000000;
    --body-bg-color: #f8f8f8;
    --container-bg-color: white;
    --container-title-bg-color: white;
    --container-border-color: grey;
    --filter-border-color: grey;
    --text-fg-color: black;
    --text-fg-color2: #e0e0e0;
    --text-bg-color: #e0e0e0;
    --text-bg-color2: #121f7e;
    --text-border-color: transparent;
    --text-date-color: #606060;
    --text-reply-color: darkblue;
    --text-reply-border-color: darkblue;
    --text-reply-label-color: grey;
    --logo-bg-color: white;
    --logo-border-color: white;
    --light-filter: none;
    --map-filter: none;
    --post-text-color: black;
    --post-bg-color: #ffffff;
    --post-border-color: grey;
    --post-drop-border-color: green;
    --post-font-size: 16px;
    --post-count-color: grey;
    --unread-bg-color: seagreen;
    --unread-color: white;
    --channel-selected-bg-color: #f0f0f0;
    --channel-hover-bg-color: #e8e8e8;
    --node-selected-bg-color: #f0f0f0;
    --node-hover-bg-color: #e8e8e8;
    --link-color: #0040c0;
    --config-table-even-bg-color: #f8f8f8;
    --config-table-separator-color: #d0d0d0;
    --config-subtitle-color: #808080;
    --invalid-text-color: #800000;
    --disabled-text-color: #808080;
    --menu-bg-color: white;
    --menu-fg-color: black;
    --menu-placeholder-color: #202020;
    --menu-border-color: grey;
    --menu-hover-bg-color: #e8e8e8;
}
@media (prefers-color-scheme: xdark)
{
:root
{
    --default-fg-color: #d0d0d0;
    --body-bg-color: #101010;
    --container-bg-color: #202020;
    --container-title-bg-color: #202020;
    --container-border-color: grey;
    --filter-border-color: #606060;
    --text-fg-color: #e0e0e0;
    --text-fg-color2: #e0e0e0;
    --text-bg-color: #303030;
    --text-bg-color2: #121f7e;
    --text-border-color: transparent;
    --text-date-color: #a0a0a0;
    --text-reply-color: lightblue;
    --text-reply-border-color: lightblue;
    --text-reply-label-color: grey;
    --logo-bg-color: #202020;
    --logo-border-color: #202020;
    --light-filter: invert(86%) sepia(86%) saturate(38%) hue-rotate(322deg) brightness(116%) contrast(69%);
    --map-filter: grayscale(100%) invert(100%);
    --post-text-color: white;
    --post-bg-color: black;
    --post-border-color: grey;
    --post-drop-border-color: green;
    --post-count-color: grey;
    --unread-bg-color: seagreen;
    --unread-color: #303030;
    --channel-selected-bg-color: #383838;
    --channel-hover-bg-color: #404040;
    --node-selected-bg-color: #383838;
    --node-hover-bg-color: #404040;
    --link-color: #70a0ff;
    --config-table-even-bg-color: #282828;
    --config-table-separator-color: #606060;
    --config-subtitle-color: #808080;
    --invalid-text-color: #800000;
    --disabled-text-color: #808080;
    --menu-bg-color: black;
    --menu-fg-color: white;
    --menu-placeholder-color: #c0c0c0;
    --menu-border-color: grey;
    --menu-hover-bg-color: #404040;
}
}
*
{
    display: flex;
    box-sizing: border-box;
}
title
{
    display: none;
}
html
{
    width: 100%;
    height: 100%;
}
body
{
    display: initial;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 10px 20px;
    overflow: hidden;
    color: var(--default-fg-color);
    background-color: var(--body-bg-color);
    font-family: var(--font-family);
}
textarea,
input,
select
{
    font-family: var(--font-family);
    color: inherit;
}
a
{
    color: var(--link-color);
}
#all
{
    height: 100%;
    flex-direction: column;
}
#header
{
    height: 50px;
    margin-bottom: 10px;
}
#header .w
{
    display: block;
    margin: auto 0 8px -22px;
    font-size: 20px;
    font-weight: bold;
}
#header .w .s
{
    font-size: 10px;
    line-height: 2px;
}
#main
{
    flex: 1;
    margin-bottom: 10px;
    border-top: 1px solid var(--container-border-color);
    border-right: 1px solid var(--container-border-color);
    border-top-right-radius: 10px;
}
#footer
{
    margin: -5px 0;
}
#footer .copy
{
    flex: 1;
    font-size: 8px;
    color: transparent;
}
#footer .copy:hover
{
    color: var(--disabled-text-color);
}
#footer .copy > div
{
    flex: 1;
    justify-content: center;
    text-align: center;
}
#left
{
    min-width: 300px;
    flex: 0;
    flex-direction: column;
}
#right
{
    flex: 1;
    flex-direction: column;
    overflow-x: hidden;
}
#channels-container
{
    position: relative;
    min-height: 200px;
    margin: 10px 10px 10px 0;
    padding-top: 30px;
    background-color: var(--container-bg-color);
    border: 1px solid var(--container-border-color);
    border-radius: 14px;
    overflow: hidden;
}
#channels
{
    width: 100%;
    flex-direction: column;
}
#nodes-container
{
    position: relative;
    flex: 1 1 0px;
    flex-direction: column;
    overflow: hidden;
    margin-right: 10px;
    padding-top: 30px;
    background-color: var(--container-bg-color);
    border: 1px solid var(--container-border-color);
    border-radius: 14px;
}
#nodes-scroll
{
    padding-top: 3px;
    flex-direction: column;
    overflow: scroll;
}
#nodes,
#favorites
{
    flex-direction: column;
}
#channels-container .title
{
    display: block;
}
#channels-container .title,
#nodes-container .title
{
    position: absolute;
    top: -1px;
    left: -5px;
    right: -1px;
    padding: 6px 14px;
    border: 1px solid var(--container-border-color);
    border-top-right-radius: 14px;
    border-top-left-radius: 14px;
    background-color: var(--container-title-bg-color);
    z-index: 1;
    font-size: 18px;
}
#nodes-container .title
{
    padding-right: 6px !important;
}
#nodes-container .title input
{
    flex: 1;
    margin-left: 8px;
    padding: 0 6px;
    background-color: transparent;
    border: 1px solid var(--filter-border-color);
    border-radius: 10px;
    color: var(--default-fg-color);
    font-size: 16px;
}
#nodes-container .node:hover,
#nodes-container .node.selected:hover
{
    background-color: var(--node-hover-bg-color);
}
/* ... */

